# python-template

./: .gitignore  CHANGELOG.md  Makefile  README.md  tests.py
template/: LICENSE  Makefile  README.md  README.rst  python-command-line.txt  python-package.txt  python-template.txt  setup.cfg  setup.py
template/doc/: conf.py  reference.md  reference.rst
template/src/package-name/: __init__.py  __main__.py  main.py  package_name.py
template/src/tests/: test.py  test_main.py  test_package_name.py
test-expected/noapi/: Makefile  README.md  setup.cfg  setup.py
test-expected/noapi-0-nomain-0/: Makefile  README.rst  setup.cfg  setup.py
test-expected/noapi-0-nomain-0/doc/: conf.py  index.md  reference.md  reference.rst
test-expected/noapi-0-nomain-0/src/my_package/: __init__.py
test-expected/noapi-0-nomain-0/src/package_name/: package_name.py
test-expected/noapi-0-nomain-0/src/tests/: test_main.py  test_my_package.py
test-expected/noapi-nomain/: LICENSE  Makefile  README.md  setup.cfg  setup.py
test-expected/noapi-nomain/src/tests/: test.py
test-expected/noapi/src/my_package/: __init__.py  main.py
test-expected/noapi/src/package_name/: __init__.py
test-expected/noapi/src/tests/: test_main.py
test-expected/nomain/: LICENSE  Makefile  README.md  README.rst  setup.cfg  setup.py
test-expected/nomain/doc/: conf.py
test-expected/nomain/src/my_package/: my_package.py
test-expected/nomain/src/tests/: test_my_package.py
test-expected/required/: Makefile  README.md  README.rst  setup.cfg
test-expected/required/doc/: conf.py
test-expected/required/src/my_package/: __main__.py  main.py
test-expected/required/src/package_name/: main.py
test-expected/required/src/tests/: test_main.py
test_expected/test_nodoc/: Makefile  README.md  setup.py
test_expected/test_nodoc/src/tests/: test_main.py
test_expected/test_nodoc_0_nomain_0/doc/: conf.py  index.rst  reference.rst
test_expected/test_nodoc_nomain/: Makefile  README.md  setup.py
test_expected/test_nodoc_nomain/src/tests/: test.py
test_expected/test_nomain/: README.rst
test_expected/test_required/: Makefile  README.rst
test_expected/test_required/src/package_name/: __init__.py  __main__.py  main.py
test_expected/test_required/src/tests/: test_main.py  test_package_name.py
