[metadata]
name = {{package}}
version = 0.9.0
url = https://github.com/{{github}}/{{package}}
author = {{name}}
author_email = {{email}}
license = MIT
description = {{package}}
{% if noapi is defined and noapi -%}
long_description = file:README.md
long_description_content_type = text/markdown; charset=UTF-8
{% else -%}
long_description = file:README.rst
{% endif -%}
keywords = {{package}}
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Utilities

[options]
packages = {{package | replace("-", "_")}}
package_dir =
    = src
{% if nomain is not defined or not nomain %}
[options.entry_points]
console_scripts =
    {{package}} = {{package | replace("-", "_")}}.main:main
{% endif -%}
