[metadata]
name = my-package
version = 0.9.0
url = https://github.com/johndoe/my-package
author = John Doe
author_email = johndoe@gmail.com
license = MIT
description = my-package
long_description = file:README.md
long_description_content_type = text/markdown
keywords = my-package
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14
    Topic :: Utilities

[options]
packages = my_package
package_dir =
    = src

[options.entry_points]
console_scripts =
    my-package = my_package.main:main
